--- a/index.html
+++ b/index.html
@@ -308,6 +308,6 @@
         </div><!--*****End-firma*****-->
         
         <!--*****SCRIPT*****-->
-        <script src="./JS/script.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
